# Pico-FIDO2

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_CN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
src/fido2/: files.c
